fix: landing cta overflow

--- a/styles/Landing.module.scss
+++ b/styles/Landing.module.scss
@@ -16,10 +16,9 @@
   margin-top: 2.5vh;
   padding: 0 1.25rem;
   text-align: center;
-  font-size: 2rem;
+  font-size: 26px;
   color: #fff;
   line-height: 1.2;
-  white-space: nowrap;
 }
 
 .title .cta {
@@ -44,20 +43,24 @@
   white-space: nowrap;
 }
 
+.cta {
+  @apply bg-c-blue-1;
+}
+
+@media only screen and (min-width: 380px) {
+  .intro {
+    font-size: 82px;
+  }
+
+  .title {
+    white-space: nowrap;
+    font-size: 2rem;
+  }
+}
 @media only screen and (min-width: 580px) {
   .intro {
     @apply text-c-dark-2;
     font-size: 7.5rem;
-  }
-
-  .title {
-    font-size: 2.6rem;
-  }
-}
-
-@media only screen and (min-width: 980px) {
-  .intro {
-    font-size: 11.6rem;
     left: 50%;
     top: 50%;
     line-height: 0.9;
@@ -67,8 +70,7 @@
   }
 
   .title {
-    color: white;
-    font-size: 3.25rem;
+    font-size: 2.6rem;
     left: 50%;
     position: absolute;
     text-align: center;
@@ -84,6 +86,12 @@
   }
 }
 
-.cta {
-  @apply bg-c-blue-1;
+@media only screen and (min-width: 980px) {
+  .intro {
+    font-size: 11.6rem;
+  }
+
+  .title {
+    font-size: 3.25rem;
+  }
 }
